--- a/project1.html
+++ b/project1.html
@@ -17,7 +17,7 @@
         <main>
             <section>
             <!-- Home Section-->
-            <img src="" alt="">
+            <img src="./picture.jpeg" alt="picture">
             <h1><u>HOME</u></h1>
             <h2>My name is Yakubu Muhammed</h2>
             <p>I'm currently learning software development in <a href="https://www.gomycode.com">GOMYCODE</a></p>
@@ -30,6 +30,7 @@
         </section>
         <section>
             <!-- Work Section-->
+             <video src="./video.mp4" controls></video>
             <h2><u>WORK</u></h2>
             <table border="1">
                 <thead>
