--- a/project1.html
+++ b/project1.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./project1.css">
         <title>My Portfolio</title>
     </head>
     <body>
         <header>
-            <nav>
+            <nav class="navbar">
                 <a href="#HOME">HOME</a>
                 <a href="#SERVICES">SERVICE</a>
                 <a href="#ABOUT">ABOUT</a>
